# ipynbConverter

./: .gitignore  .replit  GITHUB_UPLOAD_GUIDE.md  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
converter/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
converter/migrations/: 0001_initial.py
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/components/: ConversionProgress.css  ConversionProgress.js  DownloadButton.css  DownloadButton.js  FileUpload.css  FileUpload.js  Footer.css  Footer.js  Header.css  Header.js
frontend/src/services/: apiService.js
ipynb2pdf_project/: asgi.py  settings.py  urls.py  wsgi.py
media/notebooks/: b921e1de-49c2-4bc6-bb83-a7c1308415fe.ipynb
static/js/: app.js
templates/: index.html
